fix overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,7 @@ a {
   margin-bottom: 15px;
   background-color: var(--light-color);
   border-radius: 5px;
+  overflow-wrap: break-word;
 }
 
 .chat-messages .message .meta {
